--- a/odoo/docker-compose.yaml
+++ b/odoo/docker-compose.yaml
@@ -2,14 +2,13 @@ version: '3.9'
 services:
   postgres:
     image: postgres:16rc1-alpine3.18
-    container_name: "postgres"
-    restart: "unless-stopped"
+    container_name: "odoo"
+    restart: "no"
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_DB: "library"
+      POSTGRES_DB: "odoo"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "123456"
     volumes:
-      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
-      - ../volumes/postgres-data:/var/lib/postgresql
+      - ../volumes/postgres-odoo:/var/lib/postgresql
